deployment/base/microservice-auth-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-deployment
  labels:
    app.kubernetes.io/name: auth-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: auth

  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth

    spec:
      containers:
        - name: auth-app
          image: 091733698341.dkr.ecr.us-east-1.amazonaws.com/microservice-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
              requests:
                memory: "128Mi"
                cpu: "250m"
              limits:
                memory: "512Mi"
                cpu: "500m"
      imagePullSecrets:
        - name: us-east-1-ecr-registry
