deployment/base/microservice-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app.kubernetes.io/name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - frontend
      #       topologyKey: "kubernetes.io/hostname"
      
      containers:
        - name: frontend-app
          image: 091733698341.dkr.ecr.us-east-1.amazonaws.com/microservice-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
              requests:
                memory: "128Mi"
                cpu: "250m"
              limits:
                memory: "512Mi"
                cpu: "1000m"

      imagePullSecrets:
        - name: us-east-1-ecr-registry
