deployment/base/microservice-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    name: auth-service
    app.kubernetes.io/name: auth-service
    external-dns.alpha.kubernetes.io/hostname: api.pauconu.com
spec:
  selector:
    app: auth
  type: NodePort
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
