deployment/base/microservice-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    name: frontend-service
    app.kubernetes.io/name: frontend-service
    external-dns.alpha.kubernetes.io/hostname: pauconu.com
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
