deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: pauconu.com
spec:
  ingressClassName: alb
  rules:
  - host: pauconu.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "frontend-service"
              port:
                number: 3000
  - host: api.pauconu.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "auth-service"
              port:
                number: 3003
